--- a/app/_includes/links.html
+++ b/app/_includes/links.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="/_bower_components/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/_bower_components/bootstrap/dist/css/bootstrap.min.css">
