--- a/app/_includes/scripts.html
+++ b/app/_includes/scripts.html
@@ -2,17 +2,17 @@
 
 <script>window.jQuery || document.write('<script src="/_bower_components/jquery.js"><\/script>')</script>
 <!-- build:js(app) /js/script.js -->
-<script src="/js/plugins.js"></script>
-<script src="/js/main.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/affix.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/alert.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/button.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/carousel.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/collapse.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/dropdown.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/modal.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/scrollspy.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/tab.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/tooltip.js"></script>
-<script src="/_bower_components/sass-bootstrap/js/popover.js"></script>
+<script src="{{site.baseurl}}/js/plugins.js"></script>
+<script src="{{site.baseurl}}/js/main.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/affix.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/alert.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/button.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/carousel.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/collapse.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/dropdown.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/modal.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/scrollspy.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/tab.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/tooltip.js"></script>
+<script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/popover.js"></script>
 <!-- endbuild -->
