--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -9,7 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
     <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-    <!-- build:css({app,.tmp}) /css/main.css -->
+    <!-- build:css({app,.tmp}) {{site.baseurl}}/css/main.css -->
     <link rel="stylesheet" href="{{site.baseurl}}/_bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
