--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
     <!-- endbuild -->
 
-    <!-- build:js(app) /js/head-scripts.js -->
+    <!-- build:js(app) {{site.baseurl}}/js/head-scripts.js -->
     <!-- Replace with a custom modernizer build for production -->
     <script src="{{site.baseurl}}/_bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
