--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -9,13 +9,13 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
     <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-    <!-- build:css({app,.tmp}) {{site.baseurl}}/css/main.css -->
+    <!-- build:css({app,.tmp}) /css/main2.css -->
     <link rel="stylesheet" href="{{site.baseurl}}/_bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
     <!-- endbuild -->
 
-    <!-- build:js(app) {{site.baseurl}}/js/head-scripts.js -->
+    <!-- build:js(app) /js/head-scripts.js -->
     <!-- Replace with a custom modernizer build for production -->
     <script src="{{site.baseurl}}/_bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
