--- a/app/_includes/scripts.html
+++ b/app/_includes/scripts.html
@@ -1,7 +1,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 <script>window.jQuery || document.write('<script src="{{site.baseurl}}/_bower_components/jquery/jquery.js"><\/script>')</script>
-<!-- build:js(app) /js/script.js -->
+<!-- build:js(app) {{site.baseurl}}/js/script.js -->
 <script src="{{site.baseurl}}/js/plugins.js"></script>
 <script src="{{site.baseurl}}/js/main.js"></script>
 <script src="{{site.baseurl}}/_bower_components/sass-bootstrap/js/affix.js"></script>
