--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -10,14 +10,14 @@
     <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
     <!-- build:css({app,.tmp}) {{site.baseurl}}/css/main.css -->
-    <link rel="stylesheet" href="{{site.baseurl}}/_bower_components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+    <link rel="stylesheet" href="/_bower_components/normalize-css/normalize.css">
+    <link rel="stylesheet" href="/css/syntax.css">
+    <link rel="stylesheet" href="/css/main.css">
     <!-- endbuild -->
 
-    <!-- build:js(app) /commangular/js/head-scripts.js -->
+    <!-- build:js(app) {{site.baseurl}}/js/head-scripts.js -->
     <!-- Replace with a custom modernizer build for production -->
-    <script src="{{site.url}}/_bower_components/modernizr/modernizr.js"></script>
+    <script src="/_bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
   </head>
