--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -9,7 +9,7 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-$fa-font-path : "/_bower_components/font-awesome/fonts";
+$fa-font-path : "/commangular/fonts";
 
 @import '../_bower_components/sass-bootstrap/lib/bootstrap';
 @import '../_bower_components/font-awesome/scss/font-awesome';
