added twitter button

--- a/app/_includes/socialbar.html
+++ b/app/_includes/socialbar.html
@@ -5,8 +5,8 @@
   				allowtransparency="true" frameborder="0" scrolling="0" width="82" height="20"></iframe></li>
 			<li><iframe src="http://ghbtns.com/github-btn.html?user=yukatan&repo=commangular&type=fork&count=true"
   				allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe></li>
-  			<li><iframe src="http://ghbtns.com/github-btn.html?user=yukatan&repo=commangular&type=follow&count=true"
-  				allowtransparency="true" frameborder="0" scrolling="0" width="140" height="20"></iframe></li>
+  			<li><a href="https://twitter.com/commangular" class="twitter-follow-button" data-show-count="false">Follow @commangular</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></li>
 		</ul>
 	</div>
 </div>
