--- a/app/_scss/header.scss
+++ b/app/_scss/header.scss
@@ -1,4 +1,11 @@
 .header {
 
 	i{font-size: 20px;margin-right: 5px;}
+	.brand-image {
+
+		padding-right: 5px;
+		max-height: 40px;
+		margin-bottom: -10px;
+		margin-top: -10px;
+	}
 }
