--- a/app/_scss/header.scss
+++ b/app/_scss/header.scss
@@ -4,8 +4,8 @@
 	.brand-image {
 
 		padding-right: 5px;
-		max-height: 40px;
-		margin-bottom: -10px;
+		margin-bottom: -8px;
 		margin-top: -10px;
+		margin-left: -5px;
 	}
 }
