changed blog icon

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -14,7 +14,7 @@
        <li {% if pageActive == 'why' %} class="active" {% endif %}><a href="{{site.baseurl}}/why" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Why Clicked']);"><i class="fa fa-question"></i>Where and Why?</a></li>
       <li {% if pageActive == 'get-started' %} class="active" {% endif %}><a href="{{site.baseurl}}/get-started" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Started Clicked']);"><i class="fa fa-gears"></i>Get Started</a></li>
       <li {% if pageActive == 'docs' %} class="active" {% endif %}><a href="{{site.baseurl}}/docs" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Docs Clicked']);"><i class="fa fa-book"></i>Documentation</a></li>
-      <li {% if pageActive == 'blog' %} class="active" {% endif %}><a href="{{site.baseurl}}/blog" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Blog Clicked']);"><i class="fa fa-book"></i>Blog</a></li>
+      <li {% if pageActive == 'blog' %} class="active" {% endif %}><a href="{{site.baseurl}}/blog" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Blog Clicked']);"><i class="fa fa-bullhorn"></i>Blog</a></li>
     </ul>
   </div>
 </nav>
